syntax = "proto3";

package protofile.account;

option go_package = "protofile/account";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ListAccount (ListAccountRequest) returns (ListAccountResponse);
  rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
  rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountResponse);
  rpc AddRole (AddRoleRequest) returns (UpdateAccountResponse);
}

message Account {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  repeated string roles = 5;
  int64 created_at = 6;
  repeated string organizations = 7;
}

message UpdateAccountRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  repeated string roles = 5;
  repeated string organizations = 6;
}

message AddRoleRequest {
  string id = 1;
  string role = 2;
}

message UpdateAccountResponse {
  bool ok = 1;
}

message GetAccountRequest {
}

message GetAccountResponse {
  Account account = 1;
}

message DeleteAccountRequest {
  string id = 1;
}

message DeleteAccountResponse {
  bool ok = 1;
}

message ListAccountRequest {
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListAccountResponse {
  repeated Account accounts = 1;
  int32 total = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool ok = 1;
  string token = 2;
}

message CreateAccountRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  repeated string roles = 4;
  repeated string organizations = 5;
}

message CreateAccountResponse {
  bool ok = 1;
  string token = 3;
}
